# numeric-tools

./: .hgtags  .travis.yml  ChangeLog  README.markdown  equation-solver.cabal  numeric-tools.cabal
Control/Monad/: Numeric.hs
Numeric/: ApproxEq.hs  FloatingPoint.hs  Utils.hs
Numeric/Classes/: Indexing.hs
Numeric/Equation/: Solver.hs
Numeric/Tools/: Differentiation.hs  Equation.hs  Integration.hs  Interpolation.hs  Mesh.hs
benchmark/: bench.hs
cbits/: ieee.c
test/: test.hs
