Name:           numeric-tools
Version:        0.1
Cabal-Version:  >= 1.6
License:        BSD3
License-File:   LICENSE
Author:         Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Maintainer:     Aleksey Khudyakov <alexey.skladnoy@gmail.com>
Homepage:       
Category:       Math
Build-Type:     Simple
Synopsis:       
  
Description: Vectors with a fixed length

source-repository head
  type:     hg
  location: https://bitbucket.org/Shimuuar/equation-solver

Library
  Build-Depends:   base >=3 && <5,
                   primitive,
                   vector
  Exposed-modules: Control.Monad.Numeric
                   Numeric.Equation.Solver
                   Numeric.Classes.Indexing
                   Numeric.Tools.Differentiation
                   Numeric.Tools.Integration
                   Numeric.Tools.Interpolation
                   Numeric.Tools.Mesh
                   Numeric.FloatingPoint
  c-sources:       cbits/ieee.c
